Wrong font (Quantico) erased, correct font (Poppins) added

--- a/src/components/pageFooter/pageFooter.css
+++ b/src/components/pageFooter/pageFooter.css
@@ -5,7 +5,7 @@
     flex-direction: row;
     align-items: center;
     justify-content: space-evenly;
-    font-family: 'Quantico';
+    font-family: 'Poppins';
     font-size: medium;
 
     .footer-contact-info-nav {
