--- a/src/components/pageHeader/pageHeader.css
+++ b/src/components/pageHeader/pageHeader.css
@@ -1,7 +1,7 @@
 @import url("../../index.css");
 
 .header-style {
-    font-family: 'Quantico';
+    font-family: 'Poppins';
 
     .header-navbar-style {
         display: flex;
