--- a/src/components/pageHome/pageHome.css
+++ b/src/components/pageHome/pageHome.css
@@ -34,7 +34,7 @@
                 color: #FFFFFF;
                 background-color: #1762A7;
                 border-radius: 10px;
-                font-family: 'Quantico';
+                font-family: 'Poppins';
                 font-size: medium;
             }
         }
