--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,151 @@
+/* FONTS */
+
+/* Poppins (Black, Bold, Italic, Light, Regular, Thin) */
+    
+    /* Thin */
+    @font-face {
+        font-family: 'Poppins';
+        font-style: normal;
+        font-weight: 100;
+        src: url(./assets/fonts/Poppins/Poppins-Thin.ttf);
+    }
+
+    /* Thin + Italic */
+    @font-face {
+        font-family: 'Poppins';
+        font-style: italic;
+        font-weight: 100;
+        src: url(./assets/fonts/Poppins/Poppins-ThinItalic.ttf);
+    }
+
+    /* Extra Light */
+    @font-face {
+        font-family: 'Poppins';
+        font-style: normal;
+        font-weight: 200;
+        src: url(./assets/fonts/Poppins/Poppins-ExtraLight.ttf);
+    }
+
+    /* Extra Light + Italic */
+    @font-face {
+        font-family: 'Poppins';
+        font-style: italic;
+        font-weight: 200;
+        src: url(./assets/fonts/Poppins/Poppins-ExtraLightItalic.ttf);
+    }
+
+    /* Light */
+    @font-face {
+        font-family: 'Poppins';
+        font-style: normal;
+        font-weight: 300;
+        src: url(./assets/fonts/Poppins/Poppins-Light.ttf);
+    }
+
+    /* Light + Italic */
+    @font-face {
+        font-family: 'Poppins';
+        font-style: italic;
+        font-weight: 300;
+        src: url(./assets/fonts/Poppins/Poppins-LightItalic.ttf);
+    }
+
+    /* Regular */
+    @font-face {
+        font-family: 'Poppins';
+        font-style: normal;
+        font-weight: 400;
+        src: url(./assets/fonts/Poppins/Poppins-Regular.ttf);
+    }
+
+    /* Regular + Italic */
+    @font-face {
+        font-family: 'Poppins';
+        font-style: italic;
+        font-weight: 400;
+        src: url(./assets/fonts/Poppins/Poppins-Italic.ttf);
+    }
+
+     /* Medium */
+     @font-face {
+        font-family: 'Poppins';
+        font-style: normal;
+        font-weight: 500;
+        src: url(./assets/fonts/Poppins/Poppins-Medium.ttf);
+    }
+
+    /* Medium + Light */
+    @font-face {
+        font-family: 'Poppins';
+        font-style: light;
+        font-weight: 500;
+        src: url(./assets/fonts/Poppins/Poppins-MediumItalic.ttf);
+    }
+
+    /* Semi Bold */
+    @font-face {
+        font-family: 'Poppins';
+        font-style: normal;
+        font-weight: 600;
+        src: url(./assets/fonts/Poppins/Poppins-SemiBold.ttf);
+    }
+
+    /* Semi Bold + Italic */
+    @font-face {
+        font-family: 'Poppins';
+        font-style: italic;
+        font-weight: 600;
+        src: url(./assets/fonts/Poppins/Poppins-SemiBoldItalic.ttf);
+    }
+
+    /* Bold */
+    @font-face {
+        font-family: 'Poppins';
+        font-style: normal;
+        font-weight: 700;
+        src: url(./assets/fonts/Poppins/Poppins-Bold.ttf);
+    }
+
+    /* Bold + Italic */
+    @font-face {
+        font-family: 'Poppins';
+        font-style: italic;
+        font-weight: 700;
+        src: url(./assets/fonts/Poppins/Poppins-BoldItalic.ttf);
+    }
+
+    /* Extra Bold */
+    @font-face {
+        font-family: 'Poppins';
+        font-style: normal;
+        font-weight: 800;
+        src: url(./assets/fonts/Poppins/Poppins-ExtraBold.ttf);
+    }
+
+    /* Extra Bold + Italic */
+    @font-face {
+        font-family: 'Poppins';
+        font-style: italic;
+        font-weight: 800;
+        src: url(./assets/fonts/Poppins/Poppins-ExtraBoldItalic.ttf);
+    }
+
+     /* Black */
+     @font-face {
+        font-family: 'Poppins';
+        font-style: normal;
+        font-weight: 900;
+        src: url(./assets/fonts/Poppins/Poppins-Black.ttf);
+    }
+
+    /* Black + Italic */
+    @font-face {
+        font-family: 'Poppins';
+        font-style: italic;
+        font-weight: 900;
+        src: url(./assets/fonts/Poppins/Poppins-BlackItalic.ttf);
+    }
+
 /* UNIVERSAL SELECTOR */
 * {
     margin: 0;
@@ -5,40 +153,9 @@
     box-sizing: border-box;
 }
 
-/* FONTS (Regular, Bold, Italic, Bold + Italic) */
-
-/* Quantico */
-@font-face {
-    font-family: Quantico;
-    font-style: normal;     
-    font-weight: 400;
-    src: url("./assets/fonts/Quantico/Quantico-Regular.ttf");
-}
-
-@font-face {
-    font-family: Quantico;
-    font-style: normal;
-    font-weight: 700;
-    src: url("./assets/fonts/Quantico/Quantico-Bold.ttf");
-}
-
-@font-face {
-    font-family: Quantico;
-    font-style: italic;
-    font-weight: 400;
-    src: url("./assets/fonts/Quantico/Quantico-Italic.ttf");
-}
-
-@font-face {
-    font-family: Quantico;
-    font-style: italic;
-    font-weight: 700;
-    src: url("./assets/fonts/Quantico/Quantico-BoldItalic.ttf");
-}
-
 /* UNIVERSAL PROJECT STYLES */
 body {
     color: #FFFFFF;
     background-color: #2F303A;
-    font-family: 'Quantico';
+    font-family: 'Poppins';
 }
